--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "multiparty": "^4.2.3",
     "nodemailer": "^6.8.0"
   }
 }
